# ffmpeg-directory-recursive

./: .gitignore  CMakeLists.txt  README.md  ToDo.txt  compile.bat  compileTest.bat  main.cpp
cpp/: FFExecute.cpp  FFExecute.hpp  HandlePipeOutput.cpp  MainMethods.cpp  MainMethods.hpp
images/: outFiles1
source/: BetterConversion.cpp  BetterConversion.hpp  CalculatorETA.cpp  CalculatorETA.hpp  ChangeFileDate.cpp  ChangeFileDate.hpp  ErrorInfo.cpp  ErrorInfo.hpp  FFExecute.cpp  FFExecute.hpp  FFTester.cpp  FFTester.hpp  FFmpegCommand.cpp  FFmpegCommand.hpp  HandlePipeOutput.cpp  HandlePipeOutput.hpp  ListMaker.cpp  ListMaker.hpp  OtherError.cpp  OtherError.hpp  Program.cpp  Program.hpp  TestPipe.cpp  TestPipe.hpp  Utils.cpp  Utils.hpp  WinConsoleHandler.cpp  WinConsoleHandler.hpp  main.cpp
source/enums/: SkipAction.hpp
